[package]
name = "klee_tutorial"
version = "0.1.0"
authors = ["pln <Per Lindgren>"]
edition = "2018"

[dependencies.panic-klee]
git = "https://gitlab.henriktjader.com/pln/panic-klee.git"
version = "0.1.0"


[dependencies.klee-sys]
git = "https://gitlab.henriktjader.com/pln/klee-sys.git"
# path = "../klee-sys"
version = "0.1.0"
#features = ["inline-asm"]

[features] 
klee-analysis = [ "klee-sys/klee-analysis" ]
klee-replay = [ "klee-sys/klee-replay"]

[profile.dev]
panic = "abort"
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization

[profile.release]
panic = "abort"
debug = true        # better debugging
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization