[package]
name = "klee_tutorial"
version = "0.1.0"
authors = ["pln <Per Lindgren>"]
edition = "2018"

[dependencies.cstr_core]
version = "0.2.2"
default-features = false

[profile.dev]
panic = "abort"
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization

[profile.release]
panic = "abort"
debug = true        # better debugging
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization
