[package]
name = "srp_analysis"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }

env_logger = "0.8.2"
handlebars = "3.5.2"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"